Fixed header image not showing on iOS

--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -134,6 +134,19 @@ body > nav
   height: 100%;
 }
 
+
+.iPad .header-background-stretch,
+.iPhone .header-background-stretch
+{
+  height: auto;
+}
+
+.iPad #header-background,
+.iPhone #header-background
+{
+  bottom: auto;
+}
+
 #category-wrapper
 {
   padding: 0;
